desktop z-index fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -593,6 +593,7 @@ button {
 	background-color: #e8e8e8;
 	will-change: all;
 	transition: all 1s ease-out;
+	z-index: 900;
 }
 
 #desktop.ootd {
